[gd_scene load_steps=17 format=2]

[ext_resource path="res://비트_일일이지정/beet.gd" type="Script" id=1]
[ext_resource path="res://비트_일일이지정/test_note.gd" type="Script" id=2]
[ext_resource path="res://비트_일일이지정/note_player.gd" type="Script" id=3]
[ext_resource path="res://음 노트/도도.mp3" type="AudioStream" id=4]
[ext_resource path="res://음 노트/시.mp3" type="AudioStream" id=5]
[ext_resource path="res://음 노트/라.mp3" type="AudioStream" id=6]
[ext_resource path="res://음 노트/도.mp3" type="AudioStream" id=7]
[ext_resource path="res://음 노트/솔.mp3" type="AudioStream" id=8]
[ext_resource path="res://음 노트/파.mp3" type="AudioStream" id=9]
[ext_resource path="res://음 노트/레.mp3" type="AudioStream" id=10]
[ext_resource path="res://음 노트/파#.mp3" type="AudioStream" id=11]
[ext_resource path="res://음 노트/솔#.mp3" type="AudioStream" id=12]
[ext_resource path="res://음 노트/레#.mp3" type="AudioStream" id=13]
[ext_resource path="res://음 노트/도#.mp3" type="AudioStream" id=14]
[ext_resource path="res://음 노트/라#.mp3" type="AudioStream" id=15]
[ext_resource path="res://음 노트/미.mp3" type="AudioStream" id=16]

[node name="beet" type="Node2D"]
script = ExtResource( 1 )
note_arr = NodePath("note_arr")

[node name="note_player" type="Node2D" parent="."]
script = ExtResource( 3 )
do = ExtResource( 7 )
re = ExtResource( 10 )
mi = ExtResource( 16 )
fa = ExtResource( 9 )
sol = ExtResource( 8 )
ra = ExtResource( 6 )
si = ExtResource( 5 )
do2 = ExtResource( 4 )
do_s = ExtResource( 14 )
re_s = ExtResource( 13 )
fa_s = ExtResource( 11 )
sol_s = ExtResource( 12 )
ra_s = ExtResource( 15 )

[node name="player" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="play_timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="rest_timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="note_arr" type="Node2D" parent="."]
script = ExtResource( 2 )

[connection signal="timeout" from="play_timer" to="." method="_on_play_timer_timeout"]
